# payment-processing-service

./: .dockerignore  .gitignore  README.md
.build/local/: .env.example  compose.yaml  override.yaml.example
.build/local/app/: Dockerfile
app/: alembic.ini  pyproject.toml
app/migrations/: env.py
app/migrations/versions/: 2026_07_02_1237-05af1698644d_add_payments_table.py  2026_07_03_0853-8e8c90f1e17e_add_outbox_outbox_messages_table.py  2026_07_03_1030-8a50dffcdfb8_added_handled_events_table.py
app/src/: main.py
app/src/core/: auth.py  clients.py  config.py  dependencies.py  enums.py  events.py  exception_handlers.py  exceptions.py  logging.py  middleware.py  responses.py  routes.py
app/src/core/broker/: __init__.py  manager.py  rabbit.py
app/src/core/db/: __init__.py  base.py  manager.py
app/src/outbox/: dependencies.py  enums.py  models.py  repositories.py  schemas.py  services.py  tasks.py
app/src/payments/: dependencies.py  enums.py  exceptions.py  models.py  repositories.py  routes.py  schemas.py  services.py  subscribers.py
app/tests/: README.md  __init__.py  conftest.py
