[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.138.1",
    "faststream[rabbit]>=0.7.1",
    "sqlalchemy>=2.0.51",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.ruff]
src = ["src"]
fix = false
preview = true
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY001", # Копирайты в начале файла
    "D100", # Докстринги для модулей
    "D104", # Докстринги для пакетов в __init__.py
    "D203", # Обязательный отступ для докстринга класса
    "D205", # Отделение саммари в многострочных докстрингах
    "D212", # Многострочный докстринг должен начинаться на первой строке
    "D400", # Отсутствие точки в конце докстринга
    "D415", # Отсутствие знака препинания в конце докстринга
    "DOC201", # return не упомянут в докстринге
    "ERA001", # Наличие комментариев в коде
    "FIX002", # Наличие TODO
    "RUF001", # Нелатинские символы в строках
    "RUF002", # Нелатинские символы в докстрингах
    "RUF003", # Нелатинские символы в комментариях
    "TD002", # Отсутствие автора TODO
    "TD003", # Отсутствие ссылки TODO

    "D101", # Докстринги для классов
    "D102", # Докстринги для методов
    "D103", # Докстринги для функций
    "D105", # Докстринги для магических методов
    "D106", # Докстринги для классов внутри классов
    "D107", # Докстринги для __init__ методов
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # asserts
    "SLF001", # Использование приватных методов за пределеами класса
    "PLC2701", # Импорт приватных имен
    "PLR6301", # Неиспользование self в методе. 
    "PLR0913", # Больше 5 аргументов у функции 
    "PLR0917", # Больше 5 позиционных аргументов у функции 
    "PLR0904", # Больше 20 публичных методов у класса 
]
"migrations/versions/*.py" = [
    "DOC501", # Упоминание RuntimeError в докстринге
    "INP001", # Отсутствие __init__.py в папке версий
]
"migrations/env.py" = [
    "INP001", # Отсутствие __init__.py в папке миграций
]
